added ioexception catching